# bank-marketing-dataops

./: .env.example  .gitignore  Dockerfile  README.md  a.py  app.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
models/: modelo_bank_marketing.pkl
models_saved/: bank_marketing_model.pkl
notebooks/: 01_entrenamiento_ia.ipynb  02_model_comparison.ipynb
notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
src/: config.py  main.py
src/ingestion/: ingest.py
src/loading/: load.py
src/models/: evaluate.py  train.py
src/pipeline/ingestion/: ingest.py
src/pipeline/loading/: load.py
src/pipeline/processing/: transform.py
src/pipeline/test/: test_ingestion.py
src/pipeline/validation/: schemas.py  semantic.py  structural.py
src/processing/: transform.py
src/utils/: analyze_csv.py  logger.py  metrics_system.py  security.py
src/validation/: schemas.py  semantic.py
src/visualization/: dashboard.py
