[project]
name = "bank-marketing-dataops"
version = "0.1.0"
description = ""
authors = [
    {name = "iamunknow-010",email = "xxkatto01xx@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "cryptography (>=48.0.0,<49.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "black (>=26.5.1,<27.0.0)"
]

[tool.poetry]
package-mode = false
