[project]
name = "bank-marketing-dataops"
version = "0.1.0"
description = ""
authors = [
    {name = "iamunknow-010",email = "xxkatto01xx@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "scikit-learn (>=1.9.0,<2.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "streamlit (>=1.58.0,<2.0.0)",
    "numpy (>=2.5.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "black (>=26.5.1,<27.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "joblib (>=1.5.3,<2.0.0)",
    "xgboost (>=3.3.0,<4.0.0)",
    "deptry (>=0.25.1,<0.26.0)"
]

[tool.poetry]
package-mode = false
